Feat: Header in progress

--- a/index.html
+++ b/index.html
@@ -4,11 +4,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="./assets/icons8-blog-16.png" />
+  <!-- Styles -->
   <link rel="stylesheet" href="blog.css" />
-  <title>Ixartz</title>
+  <!-- Font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+
+  <title>Ixartz Blog</title>
 </head>
 
 <body>
+  <main class="main">
+    <header>
+      <nav class="nav-center">
+        <!-- Nav header = Blog Icon -->
+        <div class="nav-header">
+          <img src="./assets/Starter.png" alt="icon" class="icon-image" />
+          <button class="nav-toggle">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+
+        <!-- links -->
+        <ul class="links">
+          <li>
+            <a href="#">Blog</a>
+          </li>
+          <li>
+            <a href="#">Newsletter</a>
+          </li>
+          <li>
+            <a href="#">Twitter</a>
+          </li>
+
+        </ul>
+
+      </nav>
+
+    </header>
+  </main>
 
 </body>
 
