Feat: Hero-section created

--- a/index.html
+++ b/index.html
@@ -49,6 +49,29 @@
       </nav>
 
     </header>
+
+    <section class="hero__section">
+      <!-- Text -->
+      <div class="hero__text">
+        <h1 class="hero__h1">Hi there, I’m <span class="text-blue">Ixartz</span>👋</h1>
+
+        <p class="hero__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+          Phasellus malesuada nisi tellus, non imperdiet nisi tempor at.<br>
+          Lorem ipsum dolor sit amet, <span class="text-blue">consectetur</span> adipiscing elit,<br>
+          sed do eiusmod tempor incididunt ut labore et <span class="text-blue">dolore</span>.</p>
+
+        <div class="hero__socialIcons">
+          <img src="./assets/Twitter.png" class="social-icons" />
+          <img src="./assets/facebook.png" class="social-icons" />
+          <img src="./assets/Linkedin.png" class="social-icons" />
+          <img src="./assets/Youtube.png" class="social-icons" />
+        </div>
+      </div>
+
+      <!-- Illustration -->
+      <div></div>
+
+    </section>
   </main>
 
   <script src="./index.js"></script>
