--- a/index.html
+++ b/index.html
@@ -69,7 +69,37 @@
       </div>
 
       <!-- Illustration -->
-      <div></div>
+      <div>
+        <img src="./assets/Western Man.png" alt="Emoji Icon" class="hero__illu" />
+      </div>
+
+    </section>
+
+    <!-- Project Section -->
+    <section class="project__section">
+
+      <h1 class="project__h1">Recent <span class="text-blue">Projects</span></h1>
+
+      <div class="projects__div">
+        <!-- 1st Project Div -->
+        <div class="project__div">
+          <div>
+            <img src="./assets/3D-illustrations-gabriel-pinheiro.com.png" class="project__illu-one" />
+          </div>
+
+          <div>
+            <div class="header__btn">
+              <h2>Project1</h2>
+              <img src="./assets/Frame 20.png" class="green-img" />
+            </div>
+
+            <p class="project__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum.<br>
+              Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</p>
+          </div>
+
+        </div>
+
+
 
     </section>
   </main>
