Feat: Project section complete

--- a/index.html
+++ b/index.html
@@ -99,6 +99,41 @@
 
         </div>
 
+        <!-- 2nd Project Div -->
+        <div class="project__div">
+          <div>
+            <img src="./assets/3D-illustrations-gabriel-pinheiro.com (1).png" class="project__illu-one" />
+          </div>
+
+          <div>
+            <div class="header__btn">
+              <h2>Project2</h2>
+              <img src="./assets/Frame 20 (1).png" class="green-img" />
+            </div>
+
+            <p class="project__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum.<br>
+              Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</p>
+          </div>
+
+        </div>
+
+        <!-- 3rd Project Div -->
+        <div class="project__div">
+          <div>
+            <img src="./assets/Awesome feature.png" class="project__illu-three" />
+          </div>
+
+          <div>
+            <div class="header__btn">
+              <h2>Project3</h2>
+              <img src="./assets/Frame 20 (2).png" class="green-img" />
+            </div>
+
+            <p class="project__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum.<br>
+              Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</p>
+          </div>
+
+        </div>
 
 
     </section>
