Feat:Article section add

--- a/index.html
+++ b/index.html
@@ -137,6 +137,28 @@
 
 
     </section>
+
+
+    <!-- Posts Section -->
+    <section class="posts__section">
+      <div class="header__posts">
+        <h1 class="posts__h1">Latest <span class="text-blue">Posts</span></h1>
+
+        <p class="all_posts1">
+          <span class="posts_text">View all posts</span>
+          <span><img src="./assets/Frame (1).png" class="arrow" alt="Arrow-Icon" /></span>
+        </p>
+      </div>
+      <!-- Post Articles -->
+      <div class="articles__posts">
+
+        <!-- 1st Article -->
+        <article>
+
+        </article>
+
+        </di>
+    </section>
   </main>
 
   <script src="./index.js"></script>
