Feat: Project section complete

--- a/index.html
+++ b/index.html
@@ -154,9 +154,49 @@
 
         <!-- 1st Article -->
         <article>
+          <div>
+            <img src="./assets/Notifications_Outline 1.png" class="article__img" alt="Article Header Image" />
+          </div>
 
+          <div class="article_texts">
+            <h4>Lorem ipsum dolor </h4>
+            <p class="article_date">April 24, 2022 - 5 min read</p>
+
+            <p class="article_p">Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.
+            </p>
+          </div>
         </article>
 
+        <!-- 2nd Article -->
+        <article>
+          <div>
+            <img src="./assets/Data processing _Outline 1.png" class="article__img" alt="Article Header Image" />
+          </div>
+
+          <div class="article_texts">
+            <h4>Lorem ipsum dolor </h4>
+            <p class="article_date">April 03, 2022 - 4 min read</p>
+
+            <p class="article_p">Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.
+            </p>
+          </div>
+        </article>
+
+
+        <!-- 3rd Article -->
+        <article>
+          <div>
+            <img src="./assets/Startup_Outline-2 1.png" class="article__img" alt="Article Header Image" />
+          </div>
+
+          <div class="article_texts">
+            <h4>Lorem ipsum dolor </h4>
+            <p class="article_date">March 12, 2022 - 6 min read</p>
+
+            <p class="article_p">Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.
+            </p>
+          </div>
+        </article>
         </di>
     </section>
   </main>
