Feat: Newsletter section add

--- a/index.html
+++ b/index.html
@@ -197,7 +197,21 @@
             </p>
           </div>
         </article>
-        </di>
+
+        <div class="all_posts_div">
+          <p class="all_posts2">
+            <span class="posts_text">View all posts</span>
+            <span><img src="./assets/Frame (1).png" class="arrow" alt="Arrow-Icon" /></span>
+          </p>
+        </div>
+
+      </div>
+    </section>
+
+
+    <!-- Newsletter Section -->
+    <section class="newsletter__section">
+
     </section>
   </main>
 
