Feat: Newsletter complete

--- a/index.html
+++ b/index.html
@@ -211,6 +211,18 @@
 
     <!-- Newsletter Section -->
     <section class="newsletter__section">
+      <div>
+        <h1 class="newsletter__h1">Subscribe to my <br><span class="text-blue">NewsLetter</span></h1>
+
+        <p class="newsletter_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+          Phasellus malesuada nisi tellus, non imperdiet nisi tempor at.</p>
+      </div>
+      <div>
+        <form class="newsletter__form">
+          <input type="email" placeholder="Enter your email" class="newsletter__input" />
+          <button class="newsletter__btn">Subscribe</button>
+        </form>
+      </div>
 
     </section>
   </main>
