Feat: Footer created

--- a/index.html
+++ b/index.html
@@ -225,6 +225,11 @@
       </div>
 
     </section>
+
+    <!-- Footer Section -->
+    <footer>
+
+    </footer>
   </main>
 
   <script src="./index.js"></script>
