--- a/index.html
+++ b/index.html
@@ -228,6 +228,20 @@
 
     <!-- Footer Section -->
     <footer>
+      <section class="footer__section">
+        <div>
+          <h5>© Copyright 2022 by Ixartz’s blog. Built with ♥ by CreativeDesignsGuru</h5>
+        </div>
+
+        <div>
+          <img src="./assets/Vector (1).png" class="footer-social-icons" />
+          <img src="./assets/Frame.png" class="footer-social-icons" />
+          <img src="./assets/Frame 1.png" class="footer-social-icons" />
+          <img src="./assets/Frame 2.png" class="footer-social-icons" />
+
+
+        </div>
+      </section>
 
     </footer>
   </main>
