Fix: Clean css code

--- a/index.html
+++ b/index.html
@@ -219,9 +219,10 @@
       </div>
       <div>
         <form class="newsletter__form">
-          <input type="email" placeholder="Enter your email" class="newsletter__input" />
-          <button class="newsletter__btn">Subscribe</button>
+          <input type="email" placeholder="Enter your email" class="newsletter__input" required />
+          <button class="newsletter__btn" type="submit">Subscribe</button>
         </form>
+
       </div>
 
     </section>
@@ -230,7 +231,8 @@
     <footer>
       <section class="footer__section">
         <div>
-          <h5>© Copyright 2022 by Ixartz’s blog. Built with ♥ by CreativeDesignsGuru</h5>
+          <h5>© Copyright 2022 by Ixartz’s blog. Built with <span style="color:red;">♥</span> by CreativeDesignsGuru
+          </h5>
         </div>
 
         <div>
